fix prismjs overflow issue

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -18,6 +18,7 @@ html {
     margin-right: 25vw;
     margin-top: 4rem;
     margin-bottom: 10rem;
+    // overflow-x: hidden;
 
     @media screen and (max-width: 1700px) {
       margin-right: 15vw;
@@ -116,6 +117,8 @@ html {
 
     main {
       grid-area: content;
+      min-width: 0;
+      overflow: auto;
     }
 
     a {
